# agentic-ai-engineering-course

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  README_PACKAGE.md  pyproject.toml
docs/: upstream-sync.md
lessons/00_templates/: article_guideline.md  notebook.ipynb
lessons/01_ai_agents_landscape/: article.md  article.metadata.json  article_guideline.md  article_stage_2.md  article_stage_2.metadata.json  guidelines_filenames.json  next_queries.md  perplexity_results.md  perplexity_results_selected.md  perplexity_sources_selected.md  research.md  research.xml  urls_to_scrape_from_research.md
lessons/02_workflows_vs_agents/: article.md  article.metadata.json  article_guideline.md  research.md
lessons/03_chaining_routing/: article_guideline.md  notebook.ipynb  research.md
lessons/03_context_engineering/: article.md  article.metadata.json  article_guideline.md  article_outline.md  article_stage_1.md  article_stage_1.metadata.json  article_stage_2.md  article_stage_2.metadata.json  article_stage_3.md  article_stage_3.metadata.json  offline_ranked_human_review.md  reflection_scores.md  style_guideline.md
lessons/03_structured_outputs/: article.md
lessons/04_chaining_routing/: article_guideline.md  notebook.ipynb
lessons/04_react_planning/: article.md  article.metadata.json  article_guideline.md
lessons/04_structured_outputs/: article.md  article.metadata.json  article_guideline.md  human_review.md  notebook.ipynb  offline_ranked_human_review.md  reflection_scores.md  research.xml  style_guideline.md
personal/: README.md
(+201 files in other folders)
